--- a/tema.css
+++ b/tema.css
@@ -1,4 +1,4 @@
-/*----Editado por Koryoshe----*/
+/*----Por: Koryoshe----*/
 
 @keyframes fadein {
 	from {opacity: 0;}
@@ -719,7 +719,6 @@
     color: #2b7b30;
     font-style: normal;
     font-weight: bold;
-    background: linear-gradient(hsla(210,10%,50%,0.3), hsla(210,10%,40%,0.3);
 }
 /*########## [chat] ##########*/
 #chat-header {
