--- a/tema.css
+++ b/tema.css
@@ -1,4 +1,4 @@
-/*----Por: Koryoshe----*/
+/*----Por Koryoshe----*/
 
 @keyframes fadein {
 	from {opacity: 0;}
@@ -717,6 +717,45 @@
     margin: 0 0 0 8px;
     padding: 0 2px;
     color: #2b7b30;
+    font-style: normal;
+    font-weight: bold;
+}
+        /*Koryoshe*/
+#chat [data-cid^='5417955-'] .un:after, #user-lists .list .user.id-5417955 .name:after, #user-rollover.id-5417955 .username:after {
+    content: 'CSS';
+    border-radius: 3px;
+    border-width: 2px;
+    font-size: 11px;
+    display: inline-block;
+    margin: 0 0 0 8px;
+    padding: 0 2px;
+    color: #643c70;
+    font-style: normal;
+    font-weight: bold;
+}
+        /*Nightplugbot*/
+#chat [data-cid^='30597988-'] .un:after, #user-lists .list .user.id-30597988 .name:after, #user-rollover.id-30597988 .username:after {
+    content: 'VIP';
+    border-radius: 3px;
+    border-width: 2px;
+    font-size: 11px;
+    display: inline-block;
+    margin: 0 0 0 8px;
+    padding: 0 2px;
+    color: #e2da24;
+    font-style: normal;
+    font-weight: bold;
+}
+        /*Koryoshe*/
+#chat [data-cid^='29319764-'] .un:after, #user-lists .list .user.id-29319764 .name:after, #user-rollover.id-29319764 .username:after {
+    content: 'CSS';
+    border-radius: 3px;
+    border-width: 2px;
+    font-size: 11px;
+    display: inline-block;
+    margin: 0 0 0 8px;
+    padding: 0 2px;
+    color: #e2da24;
     font-style: normal;
     font-weight: bold;
 }
