--- a/tema.css
+++ b/tema.css
@@ -698,17 +698,11 @@
     margin: 0px 0px 0 20px!important;
     padding: 0 0 0 18px;
 }
-       /*###### [Designer] #######*/
+       /*###### [Diamante] #######*/
           /*Koryoshe*/
 #user-rollover.id-5417955 .level:after {
-    background-image: url(none);
-    background-repeat: no-repeat;
-    content: "[H]";
-    display: inline-block;
-    color: #90369c!important;
-    font-weight: bold;
-    margin: 0px 0px 0 20px!important;
-    padding: 0 0 0 18px;
+    background-image: url(https://cdn.radiant.dj/rcs/icons/donatorDiamond.png);
+	background-repeat: no-repeat;
 }
 /*###### [Tag Chat] ######*/
         /*NightPlug*/
@@ -726,16 +720,12 @@
 }
         /*Koryoshe*/
 #chat [data-cid^='5417955-'] .un:after, #user-lists .list .user.id-5417955 .name:after, #user-rollover.id-5417955 .username:after {
-    content: 'host';
+	background: url(https://cdn.radiant.dj/rcs/icons/donatorDiamond.png);
+	background-repeat: no-repeat;
     border-radius: 3px;
     border-width: 2px;
-    font-size: 11px;
     display: inline-block;
-    margin: 0 0 0 8px;
-    padding: 0 2px;
-    color: #643c70;
-    font-style: normal;
-    font-weight: bold;
+    margin: 0 0 0 8px
 }
         /*Nightplugbot*/
 #chat [data-cid^='30597988-'] .un:after, #user-lists .list .user.id-30597988 .name:after, #user-rollover.id-30597988 .username:after {
