--- a/tema.css
+++ b/tema.css
@@ -1,4 +1,4 @@
-/*----Por Koryoshe----*/
+/*---- CSS By:Koryoshe ----*/
 
 @keyframes fadein {
 	from {opacity: 0;}
@@ -10,7 +10,6 @@
 	text-shadow: 0 0 5px;
 }
 #search-menu .menu ul  i, #search-menu-icon {
-	/*Adblock fix*/
 	display: inline !important;
 }
 .slider .line, #user-settings .slider .bar {
@@ -1009,8 +1008,17 @@
 }
 /*--[welcome & log]--*/
 #chat .cm.welcome {
-	color: hsl(210,80%,60%);
-	box-shadow: inset 0 0 0 1px hsl(210,50%,30%);
+    color: hsl(210,80%,60%);
+    box-shadow: inset 0px 0px 3px 3px hsla(246, 49%, 43%, 0.86);
+    border: double;
+    border-radius: 0px 25px;
+}
+#chat .log .text {
+    color: #ffffff;
+    font-weight: 700;
+    text-align: center;
+    border-radius: 25px 25px;
+    box-shadow: inset 0px 0px 17px 3px #798892;
 }
 #chat .log {
 	background: linear-gradient(hsla(220,30%,20%,0.8), hsla(220,30%,15%,0.8)),
