--- a/tema.css
+++ b/tema.css
@@ -854,8 +854,8 @@
 #filter-bar,
 #user-friends .search,
 .app-right .friends .list-header .input-background {
-	border-radius: 20px;
-	background: linear-gradient(to top, hsla(220, 5%, 64%, 0.34), hsla(220, 5%, 64%, 0.34));
+    border-radius: 10px 25px;
+    background: linear-gradient(to top, hsla(220, 5%, 64%, 0.34), hsla(219, 66%, 50%, 0.2));
 }
 .focused {
 	color: #EEE !important;
@@ -871,11 +871,11 @@
 }
 /*### [message] ###*/
 #chat .cm {
-	animation: fadein 0.2s;
+    animation: fadein 2.3s;
 }
 #chat .cm {
-	background: linear-gradient(hsla(220,10%,20%,0.5), hsla(220,10%,15%,0.5));
-	box-shadow: inset 1px 1px 0 hsla(220,10%,20%,0.8);
+    background: linear-gradient(hsla(0, 0%, 25%, 0), hsla(220, 2%, 41%, 0.3));
+    box-shadow: inset 1px 1px 20px 2px rgba(0, 55, 255, 0.31);
 }
 #chat .rs-log-earn {
     color: #69c;
@@ -883,8 +883,8 @@
     font-weight: 700;
 }
 #chat .cm.message:nth-child(odd) {
-	background: linear-gradient(hsla(220,10%,10%,0.5), hsla(220,10%,12%,0.5));
-	box-shadow: inset 1px 1px 0 hsla(220,10%,5%,0.8);
+	background: rgba(0, 0, 0, 0);
+	box-shadow: inset 1px 1px 13px 1px hsla(0, 0%, 92%, 0);
 	color: #69c;
 }
 #chat .cm.message .timestamp {
@@ -1118,12 +1118,11 @@
 }
 /*--[BOT]--*/
 #chat .cm.emote {
-	background: linear-gradient(hsla(219,100%,20%,0.8), hsla(219,100%,10%,0.8)),
-	linear-gradient(to right, hsla(0,0%,0%,0), hsla(0,0%,100%,0.2)) !important;
-	border-left: none !important;
-	text-align: left;
-	box-shadow: inset 0 0 0 1px hsla(220,100%,50%,0.5);
-	border: none !important;
+    background: linear-gradient(hsla(235, 69%, 34%, 0.8), hsla(285, 40%, 18%, 0.33)),
+	linear-gradient(to right, hsl(0, 0%, 0%), hsl(0, 0%, 0%)) !important;
+    border-left: none !important;
+    text-align: left;
+    box-shadow: inset 0 0 20px 4px hsla(237, 100%, 50%, 0.5);
 }
 #chat .cm.emote .un, #chat .cm.emote .timestamp {
 	color: hsl(210,100%,60%) !important;
