--- a/tema.css
+++ b/tema.css
@@ -768,7 +768,8 @@
 }
         /*Koryoshe*/
 #chat [data-cid^='5417955-'] .un:after, #user-lists .list .user.id-5417955 .name:after, #user-rollover.id-5417955 .username:after {
-	content: url(https://cdn.radiant.dj/rcs/icons/donatorDiamond.png);
+    content: url(https://cdn.radiant.dj/rcs/icons/donatorDiamond.png);
+    margin: 10px;
 }
         /*Nightplugbot*/
 #chat [data-cid^='30597988-'] .un:after, #user-lists .list .user.id-30597988 .name:after, #user-rollover.id-30597988 .username:after {
