--- a/tema.css
+++ b/tema.css
@@ -374,13 +374,19 @@
 	background: linear-gradient(135deg, hsla(210,80%,60%,0.9), hsla(210,80%,50%,0.9));
 }
 #dj-button.is-leave .left, #dj-button.is-quit .left {
-	background: linear-gradient(135deg, hsla(15,80%,60%,0.6), hsla(15,80%,50%,0.6));
+    background: linear-gradient(135deg, hsla(210, 65%, 58%, 0), hsla(210, 80%, 50%, 0));
+    box-shadow: inset 0 0 20px 7px rgba(255, 0, 0, 0.66), 0 0 20px 2px rgba(29, 183, 234, 0.83);
 }
 #dj-button.is-leave:hover .left, #dj-button.is-quit:hover .left {
 	background: linear-gradient(135deg, hsla(15,80%,60%,0.9), hsla(15,80%,50%,0.9));
 }
+#dj-button.is-full .left {
+    background: linear-gradient(135deg, hsla(0, 68%, 24%, 0.54), hsla(0, 77%, 20%, 0.54));
+    box-shadow: inset 0px 0px 20px 4px rgba(249, 5, 5, 0.75);
+}
 #dj-button.is-locked .left, #dj-button.is-full .left {
-	background: linear-gradient(135deg, hsla(0,0%,10%,0.6), hsla(0,0%,5%,0.6));
+    background: linear-gradient(135deg, hsla(0, 68%, 24%, 0.54), hsla(0, 77%, 20%, 0.54));
+    box-shadow: inset 0px 0px 20px 4px rgba(249, 5, 5, 0.75);
 }
 #dj-button.is-locked:hover .left, #dj-button.is-full:hover .left {
 	background: linear-gradient(135deg, hsla(0,0%,10%,0.9), hsla(0,0%,5%,0.9));
