--- a/tema.css
+++ b/tema.css
@@ -10,7 +10,7 @@
 	width: 500% !important;
 	height: 500% !important;
 }	
-/*#### [CONFIG DA SALA] ####*/
+/*#### [PLUG] ####*/
 #room-settings a:hover, #chat a:hover {
 	color: hsl(200,100%,55%) !important;
 	text-shadow: 0 0 5px;
@@ -364,15 +364,15 @@
 }
 /*#### [DJ-BUTTON] ####*/
 #dj-button {
-	border-radius: 50px;
-	background: linear-gradient(hsla(210,10%,50%,0.3), hsla(210,10%,40%,0.3));
-	box-shadow: 0px 0px 9px 4px #6dc3e0;
+    border-radius: 40px 20px 20px 40px;
+    background: linear-gradient(hsla(210,10%,50%,0.3), hsla(210,10%,40%,0.3));
+    box-shadow: 0px 0px 9px 4px #6dc3e0;
 }
 #dj-button:hover {
 	background: linear-gradient(hsla(210,10%,50%,0.5), hsla(210,10%,40%,0.5));
 }
 #dj-button .left {
-	border-radius: 50px 0 0 50px;
+    border-radius: 40px 5mm 5mm 50px;
 	background: linear-gradient(135deg, hsla(210,80%,60%,0.6), hsla(210,80%,50%,0.6));
 	box-shadow: 0 0 10px #6dc3e0;
 }
@@ -485,9 +485,9 @@
     background-position: center center;
 }
 #woot {
-	border-radius: 30px 0 0 30px;
-	background: linear-gradient(135deg, hsla(0,0%,50%,0.3), hsla(0,0%,30%,0.3)) !important;
-	box-shadow: inset 0 0 10px hsl(0,0%,40%) !important;
+    border-radius: 40px 10px 10px 0px;
+    background: linear-gradient(135deg, hsla(0,0%,50%,0.3), hsla(0,0%,30%,0.3)) !important;
+    box-shadow: inset 0 0 10px hsl(0,0%,40%) !important;
 }
 #woot.selected, #woot-rs .title {
     background: linear-gradient(135deg, hsla(105, 100%, 50%, 0), hsla(90, 96%, 50%, 0)) !important;
@@ -502,8 +502,9 @@
     background-position: center;
 }
 #grab {
-	background: linear-gradient(hsla(0,0%,50%,0.3), hsla(0,0%,30%,0.3)) !important;
-	box-shadow: inset 0 0 10px hsl(0,0%,40%) !important;
+    background: linear-gradient(hsla(0,0%,50%,0.3), hsla(0,0%,30%,0.3)) !important;
+    box-shadow: inset 0 0 10px hsl(0,0%,40%) !important;
+    border-radius: 10px;
 }
 #grab.selected, #grab-rs .title {
     background: linear-gradient(hsla(270, 70%, 50%, 0), hsla(265, 74%, 37%, 0)) !important;
@@ -518,10 +519,10 @@
     background-position: center;
 }
 #meh {
-	background: linear-gradient(225deg, hsla(0,0%,50%,0.3), hsla(0,0%,30%,0.3)) !important;
-	box-shadow: inset 0 0 10px hsl(0,0%,40%) !important;
-	border-radius: 0 30px 30px 0;
-	margin-right: 0 !important;
+    background: linear-gradient(225deg, hsla(0,0%,50%,0.3), hsla(0,0%,30%,0.3)) !important;
+    box-shadow: inset 0 0 10px hsl(0,0%,40%) !important;
+    border-radius: 10px 0px 40px 10px;
+    margin-right: 0 !important;
 }
 #meh.selected, #meh-rs .title {
     background: linear-gradient(135deg, hsla(105, 100%, 50%, 0), hsla(90, 96%, 50%, 0)) !important;
