--- a/tema.css
+++ b/tema.css
@@ -9,8 +9,16 @@
 	background: url(https://image.prntscr.com/image/hFefx0wFS42_Z3HxA4uSBQ.jpg) no-repeat !important;
 	width: 500% !important;
 	height: 500% !important;
+}
+/*#### [ICONE DA SALA] ####*/
+.icon-room {
+    background: url(https://image.prntscr.com/image/HeyQPf2jQVyGNd_aXO1HXQ.png) no-repeat;
+    width: 38px !important;
+    height: 38px !important;
+    top: 8px !important;
+    left: 2px !important;
 }	
-/*#### [PLUG] ####*/
+/*#### [CONFIG DA SALA] ####*/
 #room-settings a:hover, #chat a:hover {
 	color: hsl(200,100%,55%) !important;
 	text-shadow: 0 0 5px;
